FLY wire David/force-app/main/default/objects/Order/fields/Concat_Order_SubGroup_Category__c.field-meta.xml
<CustomField>
    <fullName>Concat_Order_SubGroup_Category__c</fullName>
    <description>Store the Concatenated OrderId&apos;s Subgroup Ids - used by NS for amendment integration logic</description>
    <inlineHelpText>Value stamped from Flow from original contract</inlineHelpText>
    <label>OBS_Original Concat Order SubGroup Categ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>