FLY wire David/force-app/main/default/objects/Order/fields/CPQ_Order_External_Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Order_External_Migration_ID__c</fullName>
    <description>Used for CPQ data migration only</description>
    <inlineHelpText>Used for CPQ data migration only</inlineHelpText>
    <label>CPQ Order External Migration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>