FLY wire David/force-app/main/default/objects/Order/fields/Flywire_Entity__c.field-meta.xml
<CustomField>
    <fullName>Flywire_Entity__c</fullName>
    <description>Created from JIRA ticket: BOPI-227.</description>
    <label>Flywire Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flywire_Entity</valueSetName>
    </valueSet>
</CustomField>