FLY wire David/force-app/main/default/objects/Order/fields/New_Update_Contract__c.field-meta.xml
<CustomField>
    <fullName>New_Update_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked when the NSId for All Orders field is checked on Opportuntiy.</description>
    <inlineHelpText>The value gets updated via flow</inlineHelpText>
    <label>New/Update Contract</label>
    <type>Checkbox</type>
</CustomField>