FLY wire David/force-app/main/default/objects/Order/fields/NS_Calc_d_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Calc_d_End_Date__c</fullName>
    <description>BOPI-337 NS needs calculated End Date on subscriptions based on Contract Start Date (=Order Start Date) + Subscription Term</description>
    <formula>IF(ISBLANK( SBQQ__Quote__r.SBQQ__EndDate__c )= FALSE, SBQQ__Quote__r.SBQQ__EndDate__c,
DATE(
/*YEAR*/
YEAR( EffectiveDate ) +
FLOOR((MONTH(EffectiveDate) +
 SBQQ__Quote__r.SBQQ__SubscriptionTerm__c -1)/12),

/*MONTH*/
CASE(MOD(MONTH(EffectiveDate) +
SBQQ__Quote__r.SBQQ__SubscriptionTerm__c,12), 0, 12,
MOD(MONTH(EffectiveDate)+
SBQQ__Quote__r.SBQQ__SubscriptionTerm__c,12)),

/*DAY*/
MIN(DAY(EffectiveDate),
CASE(MOD(MONTH(EffectiveDate) +
SBQQ__Quote__r.SBQQ__SubscriptionTerm__c,12),
9, 30,
4, 30, 
6, 30,
11, 30,
2,

/* return max days for February dependent on if end date is leap year */

 IF(MOD(YEAR(EffectiveDate) + FLOOR((MONTH(EffectiveDate) + SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)/12), 400) = 0 
  || (MOD(YEAR(EffectiveDate) + FLOOR((MONTH(EffectiveDate) + SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)/12), 4) = 0 
  &amp;&amp; MOD(YEAR(EffectiveDate) + FLOOR((MONTH(EffectiveDate) + SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)/12), 100) &lt;&gt; 0 ), 
  29, 
  28), 
  31) 
  ) 
  ) - 1 
)</formula>
    <inlineHelpText>Calculated end date based on Contract Start Date and Quote Subscription Term</inlineHelpText>
    <label>NS Calc&apos;d End Date</label>
    <type>Date</type>
</CustomField>