FLY wire David/force-app/main/default/objects/Order/fields/NS_Complete__c.field-meta.xml
<CustomField>
    <fullName>NS_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once all the Orders and OrderLineItems are processed at NetSuite end, Workato Checks the field on orders.</description>
    <inlineHelpText>Checked by Workato once the order processed at NS.</inlineHelpText>
    <label>NS Complete</label>
    <type>Checkbox</type>
</CustomField>