FLY wire David/force-app/main/default/objects/Order/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <description>Created from JIRA ticket: BOPI-178.</description>
    <formula>Account.Name &amp; &apos; - &apos; &amp; OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>