FLY wire David/force-app/main/default/objects/Order/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-36 Ship To Account to add subsidiaries to &apos;parent&apos; contracts</description>
    <inlineHelpText>Subsidiary Account</inlineHelpText>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>