FLY wire David/force-app/main/default/objects/Order/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <description>Created from JIRA ticket: BOPI-227.
This field is twinned from the quote which is subsequently updated from the Account via the (ACC) Account Triggered Quote Updater flow</description>
    <label>Tax Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>