FLY wire David/force-app/main/default/objects/Order/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Copies the Vertical value from Quote, to be sent to NS
BOPI-499</description>
    <formula>SBQQ__Quote__r.Vertical__c</formula>
    <inlineHelpText>Order&apos;s vertical, based on Opp record type</inlineHelpText>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>